--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,11 +3,15 @@ Type: Package
 Title: Math4753 Package
 Version: 0.1.0
 Author: Xavier Williams
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: Package for MATH4753
-License: What license is it under?
+Maintainer: The package maintainer <xkw.1602@ou.edu>
+Description: This is an R package for MATH 4753 containing functions and data used in class.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 Depends: 
     R (>= 2.10)
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
