--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,26 @@
 
 export(findz)
 export(mybin)
+export(myboot2)
+export(myci)
 export(mycltb)
 export(myncurve)
 export(ntickets)
+importFrom(grDevices,rainbow)
+importFrom(graphics,abline)
+importFrom(graphics,barplot)
+importFrom(graphics,curve)
+importFrom(graphics,hist)
+importFrom(graphics,layout)
+importFrom(graphics,polygon)
+importFrom(graphics,segments)
+importFrom(graphics,text)
+importFrom(stats,dnorm)
+importFrom(stats,pbinom)
+importFrom(stats,pnorm)
+importFrom(stats,qbinom)
+importFrom(stats,qt)
+importFrom(stats,quantile)
+importFrom(stats,rbinom)
 importFrom(stats,sd)
+importFrom(stats,uniroot)
